# image-classifier

./: .gitattributes  Image_Classifier_Project.ipynb  README.md  predict.py  predict_results.txt  pyproject.toml  requirements.txt  start_predict_densenet.sh  start_predict_vgg.sh  start_train_densenet.sh  start_train_vgg.sh  train.py  train_results.txt
