[project]
name = "image-classifier"
version = "0.1.0"
description = "An image classification project developed as part of the AWS AI/ML Scholarship Program Nanodegree. Uses transfer learning to create a deep learning model recognizing 102 flower species. Demonstrates data preprocessing, neural network training, and inference with PyTorch and pre-trained architectures."
authors = [
    {name = "Sushmitha047"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "appnope (==0.1.4)",
    "asttokens (==3.0.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2024.12.14)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "comm (==0.2.2)",
    "contourpy (==1.3.1)",
    "crashtest (==0.4.1)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.12)",
    "decorator (==5.1.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.7)",
    "executing (==2.1.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.16.1)",
    "fonttools (==4.55.3)",
    "fsspec (==2024.12.0)",
    "idna (==3.10)",
    "installer (==0.7.0)",
    "ipykernel (==6.29.5)",
    "ipython (==8.31.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.5)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.7.2)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.8)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.10.0)",
    "matplotlib-inline (==0.1.7)",
    "more-itertools (==10.6.0)",
    "mpmath (==1.3.0)",
    "msgpack (==1.1.0)",
    "nest-asyncio (==1.6.0)",
    "networkx (==3.4.2)",
    "numpy (==2.2.2)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "parso (==0.8.4)",
    "pexpect (==4.9.0)",
    "pillow (==11.1.0)",
    "pkginfo (==1.12.0)",
    "platformdirs (==4.3.6)",
    "poetry (==2.0.1)",
    "poetry-core (==2.0.1)",
    "prompt-toolkit (==3.0.48)",
    "psutil (==6.1.1)",
    "ptyprocess (==0.7.0)",
    "pure-eval (==0.2.3)",
    "pycparser (==2.22)",
    "pygments (==2.19.1)",
    "pyparsing (==3.2.1)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2024.2)",
    "pyzmq (==26.2.0)",
    "rapidfuzz (==3.11.0)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "seaborn (==0.13.2)",
    "setuptools (==75.8.0)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "stack-data (==0.6.3)",
    "sympy (==1.13.1)",
    "tomlkit (==0.13.2)",
    "torch (==2.5.1)",
    "torchvision (==0.20.1)",
    "tornado (==6.4.2)",
    "traitlets (==5.14.3)",
    "trove-classifiers (==2025.1.15.22)",
    "typing-extensions (==4.12.2)",
    "tzdata (==2024.2)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.29.1)",
    "wcwidth (==0.2.13)",
    "xattr (==1.1.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
poetry-plugin-export = ">=1.8"